src/objects/Vendor__c.object
<CustomObject>
    <description>Vendor</description>
    <fields>
        <fullName>Vendor_Code_EN__c</fullName>
        <label>编码英文名称</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>编码</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>供应商名字</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>城市</label>
        <picklist>
            <controllingField>provice__c</controllingField>
            <picklistValues>
                <fullName>房山</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>襄阳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>武汉</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>provice__c</fullName>
        <label>省份</label>
        <picklist>
            <picklistValues>
                <fullName>北京</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>湖北</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>供应商</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Name__c</columns>
        <columns>city__c</columns>
        <columns>provice__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Vendor_Code__c</columns>
        <columns>Vendor_Code_EN__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>Vendor名称</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>